--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "@astrojs/react": "^3.6.1",
+    "@emotion/styled": "^11.13.0",
     "@fontsource-variable/fira-code": "^5.0.18",
     "@fontsource-variable/montserrat": "^5.0.19",
+    "@mui/material": "^5.16.7",
     "astro": "^4.13.2",
+    "react-github-calendar": "^4.2.2",
     "sass": "^1.77.8"
   }
 }
