🎨 Se agrega sección contactForm
INtegración con nodemailer

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
+# Ignore dotenv environment files
+.env
 # Runtime data
 pids
 *.pid
