🔥 Remove vscode config from repo

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,20 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+### VisualStudioCode ###
+.vscode/*      # Maybe .vscode/**/* instead - see comments
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
+
+# End of https://www.gitignore.io/api/visualstudiocode
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 # Ignore dotenv environment files
