--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "nodemailer": "^6.9.15",
     "react-github-calendar": "^4.2.2",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.8"
   },
   "devDependencies": {
