--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,24 @@
 {
-  "extends": "astro/tsconfigs/base",
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "react",
-   "baseUrl": ".",
-		"paths": {
-			"@src/*": ["src/*"],
-			"@components/*": ["src/components/*"],
-			"@atoms/*": ["src/components/atoms/*"],
-			"@molecules/*": ["src/components/molecules/*"],
-			"@organisms/*": ["src/components/organisms/*"],
-			"@layouts/*": ["src/layouts/*"],
-			"@pages/*": ["src/pages/*"],
-			"@controllers/*": ["src/controllers/*"],
-			"@data/*": ["src/data/*"],
-			"@sass/*": ["src/sass/*"],
-			"@img/*": ["public/img/*"],
-		}
+	"extends": "astro/tsconfigs/base",
+	"compilerOptions": {
+	  "jsx": "react-jsx",
+	  "jsxImportSource": "react",
+	  "baseUrl": ".",
+	  "paths": {
+		"@src/*": ["src/*"],
+		"@components/*": ["src/components/*"],
+		"@atoms/*": ["src/components/atoms/*"],
+		"@molecules/*": ["src/components/molecules/*"],
+		"@organisms/*": ["src/components/organisms/*"],
+		"@layouts/*": ["src/layouts/*"],
+		"@pages/*": ["src/pages/*"],
+		"@controllers/*": ["src/controllers/*"],
+		"@data/*": ["src/data/*"],
+		"@sass/*": ["src/sass/*"],
+		"@img/*": ["public/img/*"]
+	  },
+	  "target": "es2020",
+	  "module": "es2020",
+	  "moduleResolution": "node"
+	}
   }
-}
