--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -30,6 +30,10 @@
 		{
 			"src": "^\\/builtwith\\.json\\/?$",
 			"dest": "_render"
+		},
+		{
+			"src": "^\\/$",
+			"dest": "_render"
 		}
 	]
 }
