🍺 Mejorando el empaquetado de la aplicación

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,7 @@
 # Please do not use [""] for the variables
 EMAIL=inset your email
+EMAIL_HOST=ingresa el host de tu correo
 EMAIL_PASS=insert your password the email
+EMAIL_PORT=ingresa el puerto de tu correo
 SITE_URL=url the site for server all website
 YT_API=api key the youtube
