--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@astrojs/node": "8.3.4",
-    "@astrojs/react": "3.6.2",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/vercel": "7.8.1",
     "@emotion/styled": "11.13.0",
     "@fontsource-variable/fira-code": "5.0.18",
@@ -24,11 +24,15 @@
     "astro": "4.15.2",
     "dotenv": "16.4.5",
     "nodemailer": "6.9.15",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-github-calendar": "4.2.2",
     "react-toastify": "10.0.5",
     "sass": "1.77.8"
   },
   "devDependencies": {
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
     "@types/node": "22.5.4"
   }
 }
