--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,2 @@
-- name: Get global node ID
-  id: get-repo-id
-  uses: nvdaes/get-repository-id@v1
-  with:
-    repository: owner/repo
-
-- name: Print Output
-  id: output
-  run: echo "${{ steps.get-repo-id.outputs.repo-id }}"
+- name: Get repository ID
+uses: nvdaes/get-repository-id@v1.0.19
