--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fontsource/questrial": "5.0.13",
     "@mui/material": "5.16.7",
     "astro": "4.15.2",
+    "astro-embed": "0.7.2",
     "dotenv": "16.4.5",
     "nodemailer": "6.9.15",
     "react": "^18.3.1",
@@ -31,8 +32,8 @@
     "sass": "1.77.8"
   },
   "devDependencies": {
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
-    "@types/node": "22.5.4"
+    "@types/node": "22.5.4",
+    "@types/react": "18.3.10",
+    "@types/react-dom": "18.3.0"
   }
 }
