--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "@types/node": "22.5.4",
     "@types/react": "18.3.10",
-    "@types/react-dom": "18.3.0"
+    "@types/react-dom": "18.3.0",
+    "stylelint": "^16.9.0",
+    "stylelint-prettier": "^5.0.2"
   }
 }
