--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@fontsource-variable/montserrat": "5.0.19",
     "@fontsource/questrial": "5.0.13",
     "@mui/material": "5.16.7",
-    "astro": "4.15.2",
+    "astro": "^4.15.12",
     "astro-embed": "0.7.2",
     "dotenv": "16.4.5",
+    "email-validator": "^2.0.4",
+    "email-verifier": "^0.0.1",
+    "install": "^0.13.0",
     "nodemailer": "6.9.15",
+    "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "4.2.2",
