--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "dependencies": {
     "@astrojs/node": "8.3.4",
     "@astrojs/react": "^3.6.2",
-    "@astrojs/vercel": "7.8.1",
+    "@astrojs/vercel": "^7.8.2",
     "@emotion/styled": "11.13.0",
     "@fontsource-variable/fira-code": "5.0.18",
     "@fontsource-variable/montserrat": "5.0.19",
     "@fontsource/questrial": "5.0.13",
     "@mui/material": "5.16.7",
-    "astro": "^4.15.12",
+    "astro": "^4.16.6",
     "astro-embed": "0.7.2",
     "dotenv": "16.4.5",
     "email-validator": "^2.0.4",
