--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
   "author": "SofiDev",
   "license": "ISC",
   "dependencies": {
-    "@astrojs/node": "8.3.4",
-    "@astrojs/react": "^3.6.2",
-    "@astrojs/vercel": "^7.8.2",
-    "@emotion/styled": "11.13.0",
-    "@fontsource-variable/fira-code": "5.0.18",
-    "@fontsource-variable/montserrat": "5.0.19",
-    "@fontsource/questrial": "5.0.13",
-    "@mui/material": "5.16.7",
-    "astro": "^4.16.6",
+    "@astrojs/node": "^9.0.0",
+    "@astrojs/react": "^4.1.2",
+    "@astrojs/vercel": "^8.0.1",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource-variable/fira-code": "^5.1.1",
+    "@fontsource-variable/montserrat": "^5.1.1",
+    "@fontsource/questrial": "^5.1.1",
+    "@mui/material": "^6.3.0",
+    "astro": "^5.1.1",
     "astro-embed": "0.7.2",
-    "dotenv": "16.4.5",
+    "dotenv": "^16.4.7",
     "email-validator": "^2.0.4",
     "email-verifier": "^0.0.1",
     "install": "^0.13.0",
-    "nodemailer": "6.9.15",
+    "nodemailer": "^6.9.16",
     "npm": "^10.9.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-github-calendar": "4.2.2",
     "react-toastify": "10.0.5",
     "sass": "1.77.8"
@@ -39,7 +39,7 @@
     "@types/node": "22.5.4",
     "@types/react": "18.3.10",
     "@types/react-dom": "18.3.0",
-    "stylelint": "^16.9.0",
+    "stylelint": "^16.12.0",
     "stylelint-prettier": "^5.0.2"
   }
 }
