--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,24 @@
 {
-	"extends": "astro/tsconfigs/base",
-	"compilerOptions": {
-	  "jsx": "react-jsx",
-	  "jsxImportSource": "react",
-	  "baseUrl": ".",
-	  "paths": {
-		"@src/*": ["src/*"],
-		"@components/*": ["src/components/*"],
-		"@atoms/*": ["src/components/atoms/*"],
-		"@molecules/*": ["src/components/molecules/*"],
-		"@organisms/*": ["src/components/organisms/*"],
-		"@layouts/*": ["src/layouts/*"],
-		"@pages/*": ["src/pages/*"],
-		"@controllers/*": ["src/controllers/*"],
-		"@data/*": ["src/data/*"],
-		"@services/*": ["src/services/*"],
-		"@sass/*": ["src/sass/*"],
-		"@img/*": ["public/img/*"]
-	  },
-	  "moduleResolution": "node"
-	}
+  "extends": "astro/tsconfigs/base",
+  "compilerOptions": {
+    "module": "es2020",
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@atoms/*": ["src/components/atoms/*"],
+      "@molecules/*": ["src/components/molecules/*"],
+      "@organisms/*": ["src/components/organisms/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@pages/*": ["src/pages/*"],
+      "@controllers/*": ["src/controllers/*"],
+      "@data/*": ["src/data/*"],
+      "@services/*": ["src/services/*"],
+      "@sass/*": ["src/sass/*"],
+      "@img/*": ["public/img/*"]
+    },
+    "moduleResolution": "node"
   }
+}
