--- a/package.json
+++ b/package.json
@@ -9,30 +9,34 @@
     "build": "astro build",
     "preview": "astro preview"
   },
-  "keywords": [],
+  "keywords": [
+    "SofiDev",
+    "Portfolio",
+    "Astro"
+  ],
   "author": "SofiDev",
   "license": "ISC",
   "dependencies": {
-    "@astrojs/node": "8.3.4",
+    "@astrojs/mdx": "^4.2.0",
     "@astrojs/react": "^3.6.2",
-    "@astrojs/vercel": "^7.8.2",
+    "@astrojs/vercel": "^8.1.2",
     "@emotion/styled": "11.13.0",
     "@fontsource-variable/fira-code": "5.0.18",
     "@fontsource-variable/montserrat": "5.0.19",
     "@fontsource/questrial": "5.0.13",
     "@mui/material": "5.16.7",
-    "astro": "^4.16.6",
-    "astro-embed": "0.7.2",
+    "astro": "^5.5.2",
+    "astro-embed": "^0.9.0",
     "dotenv": "16.4.5",
     "email-validator": "^2.0.4",
     "email-verifier": "^0.0.1",
+    "iconify-icon": "^2.3.0",
     "install": "^0.13.0",
     "nodemailer": "6.9.15",
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "4.2.2",
-    "react-toastify": "10.0.5",
     "sass": "1.77.8"
   },
   "devDependencies": {
