✨ New about profile image. README updated

--- a/.env.dev
+++ b/.env.dev
@@ -4,4 +4,5 @@ EMAIL_HOST=ingresa el host de tu correo
 EMAIL_PASS=insert your password the email
 EMAIL_PORT=ingresa el puerto de tu correo
 SITE_URL=url the site for server all website
+LOCAL_URL="http://localhost:4322"
 YT_API=api key the youtube
