✏️ Fix bug while deploying

--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,4 @@ EMAIL_PORT=ingresa el puerto de tu correo
 SITE_URL=url the site for server all website
 LOCAL_URL="http://localhost:4322"
 YT_API=api key the youtube
+WPGRAPHQL_URL=https://blog.itssofi.dev/graphql
